# Bonxai

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
.github/: FUNDING.yml
Bonxai/: CMakeLists.txt  package.xml
Bonxai/bonxai_core/: CMakeLists.txt
Bonxai/bonxai_core/benchmark/: benchmark_utils.hpp  get_memory.cpp
Bonxai/bonxai_map/: CMakeLists.txt
Bonxai/bonxai_map/benchmark/: CMakeLists.txt  benchmark_pointcloud.cpp
Bonxai/bonxai_map/include/bonxai_map/: probabilistic_map.hpp
Bonxai/examples/: CMakeLists.txt  test_serialization.cpp
Bonxai_ros/: README.md
Bonxai_ros/bonxai_msgs/: CMakeLists.txt  package.xml
Bonxai_ros/bonxai_msgs/include/bonxai_msgs/: conversion.hpp
Bonxai_ros/bonxai_msgs/msg/: Bonxai.msg  BonxaiWithPose.msg
Bonxai_ros/bonxai_pub/: CMakeLists.txt  package.xml
Bonxai_ros/bonxai_pub/src/: listener.cpp  talker.cpp
Bonxai_ros/bonxai_ros/: CMakeLists.txt  package.xml
Bonxai_ros/bonxai_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
Bonxai_ros/bonxai_rviz_plugins/include/bonxai_rviz_plugins/: bonxai_grid_display.hpp
Bonxai_ros/bonxai_rviz_plugins/src/: bonxai_grid_display.cpp
Bonxai_ros/bonxai_server/: CMakeLists.txt  package.xml
Bonxai_ros/bonxai_server/include/: bonxai_server.hpp
Bonxai_ros/bonxai_server/launch/: bonxai_mapping.launch.py  bonxai_mapping.launch.xml
Bonxai_ros/bonxai_server/rviz/: bonxai.rviz
Bonxai_ros/bonxai_server/src/: bonxai_server.cpp
benchmark/: CMakeLists.txt  benchmark_bonxai.cpp  benchmark_compression.cpp  benchmark_lama.cpp  benchmark_octomap.cpp  benchmark_open3d.cpp  benchmark_openvdb.cpp  benchmark_treexy.cpp  benchmark_utils.hpp  get_memory.cpp
boncai/: CMakeLists.txt
boncai/include/: boncai.h
boncai/src/: boncai.cpp  pointer_input_stream.hpp  vector_output_stream.hpp
bonxai_core/: CMakeLists.txt  package.xml
bonxai_core/benchmark/: CMakeLists.txt  benchmark_bonxai.cpp  benchmark_compression.cpp  benchmark_downsampling.cpp  benchmark_octomap.cpp  benchmark_utils.hpp  get_memory.cpp
bonxai_core/include/bonxai/: bonxai.h  bonxai.hpp  bonxai_2D.hpp  grid_allocator.hpp  grid_coord.hpp  mask.hpp  serialization.hpp
bonxai_core/src/: bonxai.cpp  pointer_input_stream.hpp  vector_output_stream.hpp
bonxai_map/: CMakeLists.txt
bonxai_map/benchmark/: CMakeLists.txt  benchmark_kitti.cpp  benchmark_pointcloud.cpp
bonxai_map/include/bonxai_map/: pcl_utils.hpp  pointcloud.hpp  probabilistic_map.hpp
bonxai_map/src/: pcl_utils.cpp  pointcloud.cpp  probabilistic_map.cpp
bonxai_msgs/: CMakeLists.txt  package.xml
bonxai_msgs/include/bonxai_msgs/: conversion.hpp
bonxai_pub/: CMakeLists.txt  package.xml
bonxai_pub/src/: listener.cpp  talker.cpp
bonxai_ros/: README.md
bonxai_ros/include/: bonxai_server.hpp
bonxai_ros/launch/: bonxai_mapping.launch.py  bonxai_mapping.launch.xml
bonxai_ros/params/: bonxai_params.yaml
bonxai_ros/rviz/: bonxai.rviz
bonxai_ros/src/: bonxai_server.cpp
bonxai_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
bonxai_rviz_plugins/include/bonxai_rviz_plugins/: bonxai_grid_display.hpp
bonxai_rviz_plugins/src/: bonxai_grid_display.cpp
cmake/: FindOpenVDB.cmake
cmake/modules/: CodeCoverage.cmake
data/: apple.pcd  color_scene.pcd  rgbd.pcd  room_scan.pcd  table_scene_mug_rgb.pcd
doc/: bonxai.xcf  treexy.xcf
examples/: CMakeLists.txt  bonxai_map_playground.cpp  test_serialization.cpp  tutorial.cpp  visitors.cpp
include/bonxai/: bonxai.hpp  node_mask.hpp  serialization.hpp
include/bonxai_map/: pointcloud.hpp
include/treexy/: node_mask.hpp  serialization.hpp  treexy.hpp  treexy_impl.hpp
src/: pcl_utils.cpp  pointcloud.cpp
test/: bonxai_map_playground.cpp  test.cpp  test_serialization.cpp
tests/: CMakeLists.txt  test_grid.cpp
