<package format="3">
  <name>bonxai_msgs</name>
  <version>1.0.0</version>
  <description>
   This package provides messages for the <a href="https://github.com/facontidavide/Bonxai">Bonxai library</a>.
  </description>

  <author email="jjdang21@gmail.com">John D'Angelo</author>
  <maintainer email="jjdang21@gmail.com">John D'Angelo</maintainer>

  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>Bonxai</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>