<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonxai_pub</name>
  <version>0.0.0</version>
  <description>This packages has two nodes. One to publish random Bonxai msgs. And another to subscribe to them.</description>
  <maintainer email="jjdang21@gmail.com">John D'Angelo</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>bonxai</depend>
  <depend>bonxai_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
