<package format="3">
  <name>bonxai_ros</name>
  <version>3.0.1</version>
  <description>Metapackage with for bonxai ros packages</description>
  <author>TODO</author>
  <maintainer email="todo@eventually.net">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bonxai_msgs</exec_depend>
  <exec_depend>bonxai_pub</exec_depend>
  <exec_depend>bonxai_rviz_plugins</exec_depend>
  <exec_depend>bonxai_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>