<package format="3">
  <name>bonxai_rviz_plugins</name>
  <version>1.0.0</version>
  <description>
     A set of plugins for displaying Bonxai grids from Bonxai ROS2 messages.
  </description>

  <author email="jjdang21@gmail.com">John D'Angelo</author>
  <maintainer email="jjdang21@gmail.com">John D'Angelo</maintainer>

  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>Bonxai</depend>
  <depend>bonxai_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>