<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bonxai_server</name>
  <version>0.0.0</version>
  <description>3D Probabilistic grid mapping server using Bonxai for the grid</description>
  <maintainer email="enrique.aleman1998@gmail.com">enrique</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>Bonxai</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
